# inputd

./: .gitignore  README.md  meson.build
data/: expidus-inputd.desktop.in
include/expidus-input/: math.h
src/: main.c  math.c
